--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
+    "react-intersection-observer": "^9.13.0",
     "react-multi-carousel": "^2.8.5",
     "react-redux": "^9.1.2",
     "react-responsive": "^10.0.0",
